--- a/app-deploy.yaml
+++ b/app-deploy.yaml
@@ -2,10 +2,11 @@ apiVersion: appsody.dev/v1beta1
 kind: AppsodyApplication
 metadata:
   name: appsody-sample-springboot
+  namespace: kabanero-samples-java
 spec:
   # Add fields here
   version: 1.0.0
-  applicationImage: appsody-sample-springboot 
+  applicationImage: appsody-sample-springboot
   stack: java-spring-boot2
   service:
     type: NodePort
