changing to svc

--- a/app-deploy.yaml
+++ b/app-deploy.yaml
@@ -2,19 +2,19 @@ apiVersion: appsody.dev/v1beta1
 kind: AppsodyApplication
 metadata:
   name: appsody-sample-springboot
-  namespace: kabanero-samples-java
+  namespace: hema-dev
 spec:
   # Add fields here
   version: 1.0.0
   applicationImage: appsody-sample-springboot
   stack: java-spring-boot2
-  createKnativeService: true
-  # service:
-  #   type: NodePort
-  #   port: 8080
-  #   annotations:
-  #     prometheus.io/scrape: 'true'
-  #     prometheus.io/path: '/actuator/prometheus'
+  # createKnativeService: true
+  service:
+    type: NodePort
+    port: 8080
+    annotations:
+      prometheus.io/scrape: 'true'
+      prometheus.io/path: '/actuator/prometheus'
   readinessProbe:
     failureThreshold: 12
     httpGet:
