knative test in diff workspace

--- a/app-deploy.yaml
+++ b/app-deploy.yaml
@@ -8,13 +8,13 @@ spec:
   version: 1.0.0
   applicationImage: appsody-sample-springboot
   stack: java-spring-boot2
-  # createKnativeService: true
-  service:
-    type: NodePort
-    port: 8080
-    annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/path: '/actuator/prometheus'
+  createKnativeService: true
+  # service:
+  #   type: NodePort
+  #   port: 8080
+  #   annotations:
+  #     prometheus.io/scrape: 'true'
+  #     prometheus.io/path: '/actuator/prometheus'
   readinessProbe:
     failureThreshold: 12
     httpGet:
