--- a/tekton/mvn-test-task.yaml
+++ b/tekton/mvn-test-task.yaml
@@ -20,7 +20,7 @@ spec:
     - name: maven-test
       securityContext:
         privileged: true
-      image: maven:3-alpine
+      image: appsody/appsody-buildah
       command: ['mvn test']
       env:
         - name: gitsource
