--- a/tekton/java-spring-boot2-test-build-deploy-pipeline.yaml
+++ b/tekton/java-spring-boot2-test-build-deploy-pipeline.yaml
@@ -9,19 +9,9 @@ spec:
     - name: docker-image
       type: image
   tasks:
-    - name: maven-test-task
+    - name: build-test-task
       taskRef:
-        name: java-spring-boot2-maven-test-task
-      resources:
-        inputs:
-        - name: git-source
-          resource: git-source
-        outputs:
-        - name: docker-image
-          resource: docker-image
-    - name: build-task
-      taskRef:
-        name: java-spring-boot2-build-task
+        name: custom-build-task
       resources:
         inputs:
         - name: git-source
@@ -32,7 +22,7 @@ spec:
     - name: deploy-task
       taskRef:
         name: java-spring-boot2-deploy-task
-      runAfter: [build-task]
+      runAfter: [build-test-task]
       resources:
         inputs:
         - name: git-source
