--- a/tekton/build-test-task.yaml
+++ b/tekton/build-test-task.yaml
@@ -35,35 +35,35 @@ spec:
       securityContext:
         privileged: true
       image: ubuntu
-      command: ["/bin/bash","-c","cd extracted && pwd && ls /"]
+      command: ["/bin/bash","-c","cd extracted/workspace && pwd && ls /"]
       env:
         - name: gitsource
           value: git-source
       volumeMounts:
         - mountPath: /var/lib/containers
           name: varlibcontainers
-    - name: build-bud
-      securityContext:
-        privileged: true
-      image: appsody/appsody-buildah
-      command: ['buildah', 'bud', '--tls-verify=false', '--format=docker', '-f', '${inputs.params.pathToDockerFile}', '-t', '${outputs.resources.docker-image.url}', '${inputs.params.pathToContext}']
-      env:
-        - name: gitsource
-          value: git-source
-      volumeMounts:
-        - mountPath: /var/lib/containers
-          name: varlibcontainers
-    - name: build-push
-      securityContext:
-        privileged: true
-      image: appsody/appsody-buildah
-      command: ['buildah', 'push', '--tls-verify=false', '${outputs.resources.docker-image.url}', 'docker://${outputs.resources.docker-image.url}']
-      env:
-        - name: gitsource
-          value: git-source
-      volumeMounts:
-        - mountPath: /var/lib/containers
-          name: varlibcontainers
+    # - name: build-bud
+    #   securityContext:
+    #     privileged: true
+    #   image: appsody/appsody-buildah
+    #   command: ['buildah', 'bud', '--tls-verify=false', '--format=docker', '-f', '${inputs.params.pathToDockerFile}', '-t', '${outputs.resources.docker-image.url}', '${inputs.params.pathToContext}']
+    #   env:
+    #     - name: gitsource
+    #       value: git-source
+    #   volumeMounts:
+    #     - mountPath: /var/lib/containers
+    #       name: varlibcontainers
+    # - name: build-push
+    #   securityContext:
+    #     privileged: true
+    #   image: appsody/appsody-buildah
+    #   command: ['buildah', 'push', '--tls-verify=false', '${outputs.resources.docker-image.url}', 'docker://${outputs.resources.docker-image.url}']
+    #   env:
+    #     - name: gitsource
+    #       value: git-source
+    #   volumeMounts:
+    #     - mountPath: /var/lib/containers
+    #       name: varlibcontainers
   volumes:
     - name: varlibcontainers
       emptyDir: {}
