--- a/tekton/build-test-task.yaml
+++ b/tekton/build-test-task.yaml
@@ -31,11 +31,11 @@ spec:
       volumeMounts:
         - mountPath: /var/lib/containers
           name: varlibcontainers
-    - name: maven-test
+    - name: maven-test-stack
       securityContext:
         privileged: true
       image: maven:3-alpine
-      command: ["/bin/bash","-c","cd extracted/user-app && pwd && ls && mvn test /"]
+      command: ["/bin/bash","-c","cd extracted && pwd && ls && mvn -f appsody-boot2-pom.xml test /"]
       env:
         - name: gitsource
           value: git-source
