--- a/tekton/test-build-task.yaml
+++ b/tekton/test-build-task.yaml
@@ -32,17 +32,20 @@ spec:
       volumeMounts:
         - mountPath: /var/lib/containers
           name: varlibcontainers
-    # - name: mvn-test
-    #   securityContext:
-    #     privileged: true
-    #   image: kabanero/java-spring-boot2:0.3
-    #   command: ["/bin/bash","-c","cd extracted && mvn test -f appsody-boot2-pom.xml"]
-    #   env:
-    #     - name: gitsource
-    #       value: git-source
-    #   volumeMounts:
-    #     - mountPath: /var/lib/containers
-    #       name: varlibcontainers
+    - name: validate-collection-is-active
+      securityContext:
+        privileged: true
+      image: kabanero/validate-collection
+      command: ["/bin/bash"]
+      args:
+        - -c
+        - "/validate.sh"
+      env:
+        - name: gitsource
+          value: git-source
+      volumeMounts:
+        - mountPath: /var/lib/containers
+          name: varlibcontainers
     - name: build-bud
       securityContext:
         privileged: true
