adding separate mvn test for app

--- a/tekton/test-build-task.yaml
+++ b/tekton/test-build-task.yaml
@@ -32,11 +32,22 @@ spec:
       volumeMounts:
         - mountPath: /var/lib/containers
           name: varlibcontainers
-    - name: mvn-test
+    - name: mvn-test-stack
       securityContext:
         privileged: true
       image: kabanero/java-spring-boot2:0.3
       command: ["/bin/bash","-c","cd extracted && mvn test -f appsody-boot2-pom.xml"]
+      env:
+        - name: gitsource
+          value: git-source
+      volumeMounts:
+        - mountPath: /var/lib/containers
+          name: varlibcontainers
+    - name: mvn-test-app
+      securityContext:
+        privileged: true
+      image: kabanero/java-spring-boot2:0.3
+      command: ["/bin/bash","-c","cd extracted/user-app && mvn test"]
       env:
         - name: gitsource
           value: git-source
