--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -25,7 +25,7 @@ spec:
         [
           "/bin/bash",
           "-c",
-          "pwd",
+          "pwd && ls",
         ]
       env:
         - name: gitsource
