testing the paths

--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -12,25 +12,13 @@ spec:
         default: /workspace/extracted/Dockerfile
       - name: pathToContext
         default: /workspace/extracted
+      - name: pathToGitSource
+        default: /workspace/git-source
   outputs:
     resources:
       - name: docker-image
         type: image
   steps:
-    - name: assemble-extract
-      securityContext:
-        privileged: true
-      image: appsody/appsody-buildah
-      command: ["/bin/bash"]
-      args:
-        - -c
-        - "/extract.sh"
-      env:
-        - name: gitsource
-          value: git-source
-      volumeMounts:
-        - mountPath: /var/lib/containers
-          name: varlibcontainers
     - name: test
       securityContext:
         privileged: true
@@ -39,6 +27,7 @@ spec:
         [
           "/bin/bash",
           "-c",
+          "pwd && ls && cd extracted && pwd && ls",
           "pwd && ls && cd git-source && pwd && ls && $APPSODY_TEST",
         ]
       env:
