--- a/app-deploy.yaml
+++ b/app-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: appsody.dev/v1beta1
 kind: AppsodyApplication
 metadata:
   name: appsody-sample-springboot
-  namespace: appsody_samples
+  namespace: appsody-samples
 spec:
   # Add fields here
   version: 1.0.0
