--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -7,28 +7,8 @@ spec:
     resources:
       - name: git-source
         type: git
-    params:
-      - name: pathToDockerFile
-        default: /workspace/extracted/Dockerfile
-      - name: pathToContext
-        default: /workspace/extracted
-      - name: pathToGitSource
-        default: /workspace/git-source
-  outputs:
-    resources:
-      - name: docker-image
-        type: image
   steps:
     - name: test
-      securityContext:
-        privileged: true
       image: kabanero/java-spring-boot2:0.3
-      command:
-        [
-          "/bin/bash",
-          "-c",
-          "ln -s ${inputs.params.pathToGitSource} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && pwd && ls && $APPSODY_TEST",
-        ]
-      env:
-        - name: gitsource
-          value: git-source
+      workingdir: ${inputs.resources.git-source.path}
+      command: ["/bin/bash", "-c", "$APPSODY_TEST"]
