--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -7,8 +7,16 @@ spec:
     resources:
       - name: git-source
         type: git
+    params:
+      - name: pathToContext
+        default: /workspace/extracted
   steps:
     - name: test
       image: kabanero/java-spring-boot2:0.3
-      workingdir: ${inputs.resources.git-source.path}
-      command: ["/bin/bash", "-c", "pwd && ls && $APPSODY_TEST"]
+      # workingdir: ${inputs.resources.git-source.path}
+      command:
+        [
+          "/bin/bash",
+          "-c",
+          "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && pwd && ls && $APPSODY_TEST",
+        ]
