removing unused var

--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -12,15 +12,10 @@ spec:
         default: /workspace/extracted
   steps:
     - name: test
-      securityContext:
-        privileged: true
       image: kabanero/java-spring-boot2:0.3
       command:
         [
           "/bin/bash",
           "-c",
-          "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && pwd && ls && $APPSODY_TEST",
+          "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && $APPSODY_TEST",
         ]
-      env:
-        - name: gitsource
-          value: git-source
