--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -17,5 +17,8 @@ spec:
         [
           "/bin/bash",
           "-c",
-          "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && $APPSODY_TEST",
+          "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && pwd && ls && $APPSODY_TEST",
         ]
+      env:
+        - name: gitsource
+          value: git-source
