--- a/tekton/test-task.yaml
+++ b/tekton/test-task.yaml
@@ -7,18 +7,19 @@ spec:
     resources:
       - name: git-source
         type: git
-    params:
-      - name: pathToContext
-        default: /workspace/extracted
+    # params:
+    #   - name: pathToContext
+    #     default: /workspace/extracted
   steps:
     - name: test
       securityContext:
         privileged: true
       image: kabanero/java-spring-boot2:0.3
-      command:
-        [
-          "/bin/bash",
-          "-c",
-          "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && pwd && ls && $APPSODY_TEST",
-        ]
-      
+      # command:
+      #   [
+      #     "/bin/bash",
+      #     "-c",
+      #     "ln -s ${inputs.resources.git-source.path} ${inputs.params.pathToContext} && cd ${inputs.params.pathToContext} && pwd && ls && $APPSODY_TEST",
+      #   ]
+      workingdir: ${inputs.resources.git-source.path}
+      command: ["/bin/bash", "-c", "$APPSODY_TEST"]
